<resources>
    <string name="app_name">WeatherApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="city_zipcode">Zip Code</string>
</resources>
